# CADTheoryFinalProject

./: .gitignore  .gitmodules  README.md
C/C_experiments/: hello_alejandro.c
C/C_learning_opengl/creating_a_window/: CMakeLists.txt
C/C_learning_opengl/creating_a_window/lib/glad/: CMakeLists.txt
C/C_learning_opengl/creating_a_window/lib/glad/include/glad/: glad.h
C/C_learning_opengl/creating_a_window/lib/glad/src/: glad.c
C/C_learning_opengl/creating_a_window/src/: hellogl.c
C/C_learning_opengl/hello_triangle/: CMakeLists.txt
C/C_learning_opengl/hello_triangle/lib/glad/: CMakeLists.txt
C/C_learning_opengl/hello_triangle/src/: example_code.c  hello_triangle.c
python/firstDraft/: CADUI.ui  CADUtils.py  bezierCurve.py  closedUniformBSpline.py  cylindricalSurface.py  intersectionCurve.py  loftedSurface.py  requirements.txt  revolvedSurface.py  ruledSurface.py  sketchPlane.py  spline.py  straightLine.py  sweptSurface.py  tempCodeRunnerFile.py  ui.py
python/py_experiments/: hello_alejandro.py
